--- a/Teamsite/style.css
+++ b/Teamsite/style.css
@@ -17,7 +17,40 @@ body {
     padding: 10px 50px;
     position: relative;
     width: 50%;
+    animation: movedown 1s linear forwards;
+    opacity: 0;
+ }
+ @keyframes movedown {
+    0%
+    {
+        opacity: 1;
+        transform: translateY(-30px);
     }
+    100%
+    {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+    
+ }
+ .container:nth-child(1){
+    animation-delay: 0s;
+ }
+ .container:nth-child(2){
+    animation-delay: 1s;
+ }
+ .container:nth-child(3){
+    animation-delay: 2s;
+ }
+ .container:nth-child(4){
+    animation-delay: 3s;
+ }
+ .container:nth-child(5){
+    animation-delay: 4s;
+ }
+ .container:nth-child(6){
+    animation-delay: 5s;
+ }
 .text-box
 {
     padding: 20px 30px;
@@ -55,6 +88,16 @@ body {
     left: 50%;
     margin-left: -3px;
     z-index: -1;
+    animation: moveline 6s linear forwards;
+}
+@keyframes moveline {
+    0%{
+        height: 0;
+    }
+    100%{
+        height: 100%;
+    }
+    
 }
 .text-box h2{
     font-weight: 600;
@@ -86,6 +129,36 @@ body {
     border-bottom: 15px solid transparent;
     border-right: 15px solid #fff;
     left: -15px;
+}
+@media screen and(max-width:600px) {
+    .timeline{
+        margin: 50px auto;
+    }
+    .timeline::after{
+        left: 31px;
+    }
+    .container{
+        width: 100%;
+        padding-left: 80px;
+        padding-right: 25px;
+    }
+    .text-box{
+        font-size: 13px;
+    }
+    .text-box small{
+        margin-bottom: 10px;
+    }
+    .right-container{
+        left: 0;
+    }
+    .left-container img, .right-container img{
+        left: 10px;
+    }
+    .left-container-arrow, .right-container-arrow{
+        border-right: 15px solid #fff;
+        border-left: 0;
+        left: -15px;
+    }
 }
 
 
