--- a/Website/portfolio/style.css
+++ b/Website/portfolio/style.css
@@ -1,9 +1,8 @@
-*
-{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family:'poppins',sans-serif;   
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family:'Poppins',sans-serif;   
 }
 body
 {
@@ -29,9 +28,6 @@ body
     color: #fff;
     text-decoration: none;
     font-weight: 600;
-    cursor:default;
-    opacity: 0;
-    animation:slideRight is ease forwards ;
 }
 .navbar a
 {
@@ -42,8 +38,6 @@ body
     font-weight: 500;
     margin-left: 35px;
     transition: .3s ;
-    opacity: 0;
-    animation: slideTop .5s ease forwards;
 }
 .navbar a:hover
 {
@@ -55,47 +49,32 @@ body
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(wallpaper.png) no-repeat;
+    background: url(background.jpg) no-repeat;
     background-size: cover;
     background-position: center;
     display: flex;
     align-items: center;
     padding: 70px 10% 0;
-
 }
-.home-content
-{
+
+.home-img-box img {
+        border-radius: 50%;
+        border: 5px solid cyan;
+}
+.home-content{
     max-width: 600px;
 }
 .home-content h3{
     font-size: 32px;
     font-weight: 700;
-    opacity: 0;
-    animation: slideButtom is ease forwards;
-    animation-delay:  .7s;
+} 
+.home-content h1{
+    font-size: 56px;
+    font-weight: 700px;
+    margin: -3px 0;
 }
-.home-content h3:nth-of-type(2)
-{
-    margin-bottom: 30px;
-}
-.home-content h3 span
-{
-    color: #0ef;
-}
-.home-content h1
-{
-    font-size:56px ;
-    font-weight: 700;
-    margin:-3px 0;
-    opacity: 0;
-    animation:slideRight is ease forwards ;
-    animation-delay: 1s;
-}
-.home-content p
-{
+.home-content p{
     font-size: 20px;
-    opacity: 0;
-    animation-delay: 1s;
 }
 .home-sci a
 {
@@ -137,39 +116,27 @@ body
     0 0 25px cyan,0 0 50px cyan,
     0 0 100px cyan,0 0 200px cyan 
 }
-@keyframes slideRight{
-    0%
-    {
-        transform: translateX(-100px);
-        opacity: 0;
-    }
-    100%
-    {
-        transform: translateX(0px);
-        opacity: 1;
-    }
-}
-@keyframes slideTop{
-    0%
-    {
-        transform: translateY(100px);
-        opacity: 0;
-    }
-    100%
-    {
-        transform: translateX(0px);
-        opacity: 1;
-    }
-}
-@keyframes slideButtom{
-    0%
-    {
-        transform: translateY(-100px);
-        opacity: 0;
-    }
-    100%
-    {
-        transform: translateX(0px);
-        opacity: 1;
-    }
-}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
