--- a/Website/portfolio/style.css
+++ b/Website/portfolio/style.css
@@ -1,3 +1,4 @@
+ 
 *{
     margin: 0;
     padding: 0;
@@ -7,6 +8,7 @@
 body
 {
     color:#ededed;
+    background: #081b29;
 }
 .header
 {
@@ -43,6 +45,7 @@ body
     transition: .3s;
     opacity: 0;
     animation: slideTop .5s ease forwards;
+    animation-delay: calc(.2s * var(--i));
 }
 .navbar a:hover
 {
@@ -54,7 +57,8 @@ body
     width: 100%;
     justify-content: space-between;
     height: 100vh;
-    background: url(background.jpg) no-repeat;
+    /* background: url(background.jpg) no-repeat; */
+    background: #081b29;
     background-size: cover;
     background-position: center;
     display: flex;
@@ -74,7 +78,7 @@ body
     font-weight: 700;
     opacity: 0;
     animation: slideButtom 1s ease forwards;
-    animation-delay:  .7s;
+    animation-delay: .7s;
 } 
 .home-content h3 span {
     color: #0ef;
@@ -82,6 +86,8 @@ body
 .home-content h3:nth-of-type(2)
 {
     margin-bottom: 30px;
+    animation: slideTop 1s ease forwards;
+    animation-delay: .7s;
 }
 .home-content h1{
     font-size: 56px;
@@ -111,10 +117,14 @@ body
     font-size: 20px;
     color:#0ef;
     text-decoration:none;
+    transition: .5s ease;
     margin:30px 15px 30px 0;
+    opacity: 0;
+    animation: slideleft 1s ease forwards;
+    animation-delay: calc(.2s * var(--i));
 }
 
-.home-sci a:hover
+.home-sci a:hover       
 {
     background: #0ef;
     color: #081b29;
@@ -131,6 +141,11 @@ body
     letter-spacing: 1px;
     text-decoration:none;
     font-weight: 600;
+    opacity: 0;
+    animation: slideTop 1s ease forwards;
+    animation-delay: 2s;
+    box-shadow: 0 0 5px #0ef,
+    0 0 25px #0ef;
 }
 .btn-box:hover
 {
@@ -138,6 +153,42 @@ body
     0 0 25px cyan,0 0 50px cyan,
     0 0 100px cyan,0 0 200px cyan 
 }
+.about{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+    justify-content: center;
+    align-items: center;
+    gap:1.5rem;
+}
+.about-img img{
+    padding-bottom: 20%;
+    max-width: 630px;
+    height: auto;
+    width: 100%;
+    /* border-radius: 8px; */
+    border-radius: 50%;
+    border: 5px solid cyan;  
+}
+.about-text h2{
+    font-size:60px;
+}
+.about-text h2 span{
+    color: #0ef;
+}
+.about-text h4{
+    font-size: 29px;
+    font-weight: 600;
+    color: #fff;
+    line-height: 1.7;
+    margin-bottom: 15px 0 30px;
+}
+.about-text p{ 
+    color: aliceblue;
+    font-size: 20px;
+    line-height:1.4;
+    margin-bottom: 4rem;
+}
+
 @keyframes slideRight{
     0%
     {
@@ -198,23 +249,211 @@ body
         transform: translateY(0px);
         opacity: 1;
     }
+} 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* *
+---------------------
+{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:'poppins',sans-serif;   
+}
+body
+{
+    color:#ededed;
+}
+.header
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px 10%;
+    background: transparent;
+    display: flex;
+    justify-content:space-between ;
+    align-items: center;
+    z-index: 100;
+}
+.logo
+{
+    position:relative;
+    font-size: 25px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    cursor:default;
+    opacity: 0;
+    animation:slideRight is ease forwards ;
+}
+.navbar a
+{
+    display: inline-block;
+    font-size: 25px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+    margin-left: 35px;
+    transition: .3s ;
+    opacity: 0;
+    animation: slideTop .5s ease forwards;
+}
+.navbar a:hover
+{
+    color: #0ef;
+}
+.home
+{
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    background: url(wallpaper.png) no-repeat;
+    background-size: cover;
+    background-position: center;
+    display: flex;
+    align-items: center;
+    padding: 70px 10% 0;
+
+}
+.home-content
+{
+    max-width: 600px;
+}
+.home-content h3{
+    font-size: 32px;
+    font-weight: 700;
+    opacity: 0;
+    animation: slideButtom is ease forwards;
+    animation-delay:  .7s;
+}
+.home-content h3:nth-of-type(2)
+{
+    margin-bottom: 30px;
+}
+.home-content h3 span
+{
+    color: #0ef;
+}
+.home-content h1
+{
+    font-size:56px ;
+    font-weight: 700;
+    margin:-3px 0;
+    opacity: 0;
+    animation:slideRight is ease forwards ;
+    animation-delay: 1s;
+}
+.home-content p
+{
+    font-size: 20px;
+    opacity: 0;
+    animation-delay: 1s;
+}
+.home-sci a
+{
+    display:inline-flex;
+    justify-content:center;
+    align-items: center;
+    width:40px;
+    height: 40px;
+    background: transparent;
+    border: 2px solid #0ef;
+    border-radius: 50%;
+    font-size: 20px;
+    color:#0ef;
+    text-decoration:none;
+    margin:30px 15px 30px 0;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.home-sci a:hover
+{
+    background: #0ef;
+    color: #081b29;
+    box-shadow: 0 0 20px #0ef;
+}
+.btn-box
+{
+    display: inline-block;
+    padding: 12px 28px;
+    background: #0ef;
+    border-radius: 40px;
+    font-size: 16px;
+    color:#081b29;
+    letter-spacing: 1px;
+    text-decoration:none;
+    font-weight: 600;
+}
+.btn-box:hover
+{
+    box-shadow: 0 0 5px cyan,
+    0 0 25px cyan,0 0 50px cyan,
+    0 0 100px cyan,0 0 200px cyan 
+}
+@keyframes slideRight{
+    0%
+    {
+        transform: translateX(-100px);
+        opacity: 0;
+    }
+    100%
+    {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideTop{
+    0%
+    {
+        transform: translateY(100px);
+        opacity: 0;
+    }
+    100%
+    {
+        transform: translateY(0px);
+        opacity: 1;
+    }
+}
+@keyframes slideButtom{
+    0%
+    {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100%
+    {
+        transform: translateX(0px);
+        opacity: 1;
+    }
+} */ 
+ 
 
 
 
