--- a/Angular/project/src/app/login/login.component.html
+++ b/Angular/project/src/app/login/login.component.html
@@ -1,7 +1,10 @@
-<p>login works!</p>
-<h1>hi i am muthuvel</h1>
-<div class="card">
-    <div class="box1"></div>
-    <div class="box1"></div>
-    <div class="box1"></div>
+<div>{{name}}
+<input type="text" [(ngModel)]='name'> 
+<input type="text" [value]="name">
+<button (click)="myfun()">submit</button>
 </div>
+<!-- {{name}}Interpolation -->
+<!-- [(ngModel)] two way binding -->
+<!-- event binding=>both input and button work -->
+<!-- property binding=>only input without any function -ex=<input type="text" [value]="name">
+ <button (click)="myfun()">submit</button> -->
