--- a/Angular/project/src/styles.scss
+++ b/Angular/project/src/styles.scss
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+.card{
+    background-color: aqua;
+    .box1{
+        background-color: black;
+        height: 50px;
+        width: 100px;
+        margin-top: 30px;
+    }
+}
