--- a/Angular/Demo/src/app/mycom/mycom.component.html
+++ b/Angular/Demo/src/app/mycom/mycom.component.html
@@ -15,5 +15,10 @@
 <!-- ngIF -->
 <p *ngIf="m">Lorem ipsum dolor sit amet consectetur 
 </p>
+<!-- ngIF-Else  using true or flase and assign variable true or False-->
+<p *ngIf="false;else text">Lorem ipsum dolor sit amet consectetur 
+</p>
+<ng-template #text>Alternate</ng-template>
+<p></p>
 
 
