--- a/Angular/Demo/src/app/mycom/mycom.component.html
+++ b/Angular/Demo/src/app/mycom/mycom.component.html
@@ -1,14 +1,13 @@
 <!-- property bindings-->
 <input type="number"[value]='a'>
 <p>mycom works!</p> 
-
  
  <!-- Event bindings -->
 <input type="number"[value]='a'>
 <p>mycom works!</p>
 <!-- <button (click)="myFun()">Sumbit</button>  -->
 
-<!-- Ng Module-->
+<!-- Ng Module -->
 <input type="number"[(ngModel)]="a"#in>
 <button (click)="myFun(in.value)">Sumbit</button>
 
@@ -20,5 +19,5 @@
 </p>
 <ng-template #text>Alternate</ng-template>
 <p></p>
-
+<div class="col">hello</div>
 
