--- a/Angular/Demo/src/app/app.component.html
+++ b/Angular/Demo/src/app/app.component.html
@@ -1,3 +1,4 @@
 <router-outlet></router-outlet>
-<app-mycom></app-mycom>
-<app-student></app-student>
+<!-- <app-mycom></app-mycom> -->
+<!-- <app-student></app-student> -->
+<app-crud></app-crud>
