--- a/Angular/Demo/src/app/crud/crud.component.scss
+++ b/Angular/Demo/src/app/crud/crud.component.scss
@@ -2,7 +2,6 @@
     display: flex;
     justify-content: space-around;
     margin: 10px;
-
 }
 .btn
 {
@@ -12,14 +11,21 @@
 .addcol
 {
     display: flex;
-    justify-content: space-around;
-    margin: 20px;
-    gap: 20px;
+    justify-content:center;
+    
 }
 .tab{
     position: absolute;
-    top: 50vh;
+    top: 500px;
     width: 90%;
     height: 50px;
-
+    border: 3px solid black;
+    border-collapse: collapse;
+}
+.addcol1
+{
+    border: 3px solid black;
+    border-collapse: collapse;
+    height: 255px;
+    width: 225px;
 }
