--- a/Angular/Demo/src/app/form/form.component.html
+++ b/Angular/Demo/src/app/form/form.component.html
@@ -1,24 +1,49 @@
-<form #form="ngForm">
-    {{form.value|json}}
+<form #form="ngForm" class="container">
+     {{form.value|json}}
     {{user | json}}
     <div class="form-group">
         <label for="id1" class="form-label">FirstName</label>
-        <input type="text"   required #f1="ngModel" class="form-control" name="firstname"id="id1" [(ngModel)]="user.firstname">
-        Dirty:{{f1.dirty}} <!-- modify-->
-        Pristine:{{f1.pristine}}<!-- only touch Not Modify-->
+        <input type="text" required #fn="ngModel" class="form-control" name="firstname"id="id1" [(ngModel)]="user.firstname">
+        <!-- Dirty:{{f1.dirty}} ---- modify
+        Pristine:{{f1.pristine}} ---- only touch Not Modify
        Touched: {{f1.touched}}
         Untouched:{{f1.untouched}}
         Valid: {{f1.valid}}
-        Invalid:{{f1.invalid}}<!--empty-->
-        <p *ngIf="f1.invalid && f1.touched" class="text-danger">firstname is required</p>
-        
-<button (click)="sub()">SUBMIT</button>
-
-        
+        Invalid:{{f1.invalid}}  --empty -->
+        <p *ngIf="fn.invalid && fn.touched" class="text-danger">Please Enter Your Firstname</p>
+        <!-- <button (click)="sub()">SUBMIT</button>       -->
    </div>
     <div class="form-group">
         <label for="id2" class="form-label">Last Name</label>
-        <input type="text" class="form-control" name="lastname" [(ngModel)]="user.lastname" id="id2">
+        <input type="text"  required #ln="ngModel" class="form-control" name="lastname" [(ngModel)]="user.lastname" id="id2">
+        <p *ngIf="ln.touched && ln.invalid" class="text-danger"> Please Enter Your Lastname</p>
     </div>
-    
+    <div>
+        <label>Select Your Department</label>
+        <select class="form-select" aria-label="Default select example" name="department" required #dept="ngModel" [(ngModel)]="user.department">
+            <!-- <option selected>Select Your Department</option> -->
+            <option value="Mechanical">Mechanical</option>
+            <option value="Automobile">Automobile</option>
+            <option value="Computer">Computer</option>
+          </select>  
+          <p *ngIf="dept.touched && dept.invalid" class="text-danger">Please Enter Your Department</p>  
+    </div>
+    <label>Select Your Gender</label>
+    <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" name="Gender" required #gender="ngModel" [(ngModel)]="user.gender">
+        <label class="form-check-label" for="flexRadioDefault1">Male
+        </label>
+        <p *ngIf="gender.touched && gender.invalid" class="text-danger">Department is required </p>  
+
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2" >
+        <label class="form-check-label" for="flexRadioDefault2">Female
+        </label>
+      </div>  
+      <div>
+        <input class="form-check-input" type="checkbox" id="checkboxNoLabel" value="" aria-label="...">Accept terms and conditions
+      </div> 
+      <input type="radio" class="btn-check" name="options-outlined" id="danger-outlined" autocomplete="off">
+      <label class="btn btn-outline-danger" for="danger-outlined">submit</label>
 </form>
