--- a/Angular/Demo/src/app/crud/crud.component.html
+++ b/Angular/Demo/src/app/crud/crud.component.html
@@ -1,21 +1,22 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <h1 style="text-align: center;">CRUD</h1>
 <div class="row">
-    <button type="button" class="btn btn-success btn " (click)="add()">Add</button>
-    <button type="button" class="btn btn-success"(click)="udate()">Update</button>
-    <button type="button" class="btn btn-success" (click)="de()">Delete</button> 
+    <button type="button" class="btn btn-primary btn " (click)="add()">Add</button>
+    <button type="button" class="btn btn-warning btn"(click)="udate()">Update</button>
+    <button type="button" class="btn btn-info btn" (click)="de()">Delete</button> 
 </div>
 <!--Create User-->
 <div class="row">
-    <div class="col-4 addcol">
+    <div class="col-4 addcol" >
         <div *ngIf="a" class="addcol1">
             <!-- <input type="text" placeholder=""[(ngModel)]="regno"> Get Getbyid
             <button (click)="getByid()">Submit</button> -->
             <label>RegNo:</label><input type="text" placeholder="Enter Your RegNo"[(ngModel)]="regno">
             <label>Name:</label><input type="text" placeholder="Enter Your Name:"[(ngModel)]="name">
             <label>Age:</label><input type="text" placeholder="Enter Your Age:"[(ngModel)]="age">
-            <label>Department:</label><input type="text" placeholder="Enter Your Department:"[(ngModel)]="department">
-            <button type="button" class="btn btn-success btn"(click)="createuser()">Submit</button>        
+            <label>Department:</label>
+            <input type="text" placeholder="Enter Your Department:"[(ngModel)]="department">
+            <button type="button"  class="btn btn-primary btn" (click)="createuser()">Submit</button>        
         </div> 
     </div>
     <div class="col-4">
@@ -25,7 +26,7 @@
             <label>Name:</label><input type="text" placeholder="Enter Your Name:"[(ngModel)]="get_name">
             <label>Age:</label><input type="text" placeholder="Enter Your Age:"[(ngModel)]="get_age">
             <label>Department:</label><input type="text" placeholder="Enter Your Department:"[(ngModel)]="get_department">
-            <button type="button" class="btn btn-success btn"(click)="getByid()">Update</button> 
+            <button type="button" class="btn btn-warning btn"(click)="getByid()">Update</button> 
             <button type="button" class="btn btn-success btn"(click)="update()">Submit</button>        
 
         </div>
@@ -33,12 +34,12 @@
     <div class="col-4">
         <div  *ngIf="d" class="addcol1">
             <label>RegNo:</label><input type="text" placeholder="Enter Your RegNo:"[(ngModel)]="regno">
-            <button type="button" class="btn btn-success btn"(click)="del()">Delete</button>        
+            <button type="button" class="btn btn-info btn"(click)="del()">Delete</button>        
         </div>
     </div>
 </div> 
-<table class="table table-striped tab">
-    <thead>
+<table class="table table-striped table-hover tab">
+   <thead>
       <tr class="table-danger">
         <th scope="col">Regno</th>
         <th scope="col">Name</th>
@@ -52,8 +53,7 @@
             <td>{{e.name}}</td>
             <td>{{e.age}}</td>
             <td>{{e.department}}</td>
-        </tr> 
-      
+        </tr>    
     </tbody>
   </table>
 
