--- a/Angular/Demo/src/app/app.component.html
+++ b/Angular/Demo/src/app/app.component.html
@@ -1,5 +1,5 @@
 <router-outlet></router-outlet>
 <!-- <app-mycom></app-mycom> -->
 <!-- <app-student></app-student> -->
-<app-crud></app-crud>
-<!-- <app-form></app-form> -->
+<!-- <app-crud></app-crud> -->
+<app-form></app-form>
