--- a/Website/portfolio/new portfolio/style.css
+++ b/Website/portfolio/new portfolio/style.css
@@ -1,56 +1,85 @@
-*
+    
+.navbar-expand-lg .navbar-collapse {
+  justify-content: space-around;
+  /* flex-direction: column;*/ 
+}
+.home-container{
+  width: 100%;
+  background:url(background.png) center center no-repeat;
+  background-size: 1280px 720px;
+  height: 350px;
+  /* display: flex;
+  align-items: center;
+  justify-content: center; */
+
+}
+h1 a:hover
 {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Inter',sans-serif;
-    text-decoration: none;
-    list-style:none;
-    scroll-behavior: smooth; */
+  color:red;
 }
 
-.nav{
-    display: flex;
-    padding: 40px 16%;
-    justify-content: space-between;
-    align-items: center;
-    position: flex;
-    width: 100%;
-    top: 0;
-    right: 0;
-    /* z-index: 1000; */
-    background-color: pink;
-        
-}
-.nav-list
-{
-    display: flex;
-    flex-direction: row;
-    gap: 2rem;
 
-}
-header {
-    position: relative;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color:red;
-    text-align: center;
-  }
-  .image-container {
-    position: relative;
-    display: inline-block;
-    /* justify-content: center; */
-  }
-  
-  .image-text {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 24px;
-    z-index: 1;
-  }
-  
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* h1{
+  display: block;
+  text-align: center;
+  background-color: blue;
+  font-size: 20px; 
+}
+span{
+  display: block;
+  background-color: blueviolet;
+} */
